--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>mini-spring</module>
+        <module>mini-spring-ioc</module>
         <module>mini-spring-test</module>
     </modules>
 
